--- a/templates/s3_form.html
+++ b/templates/s3_form.html
@@ -1,5 +1,6 @@
 <html>
    <body>
+      <h1>{{ info }}</h1>
       <h1> Number of users: {{ data }}</h1>
       <form action = "/upload" method = "POST" 
          enctype = "multipart/form-data">
